<resources>
    <string name="app_name">Travel packages</string>
    <string name="specials">Specials</string>
    <string name="brazil">Brazil</string>
    <string name="initial_package_banner">Initial package banner</string>
    <string name="final_price">Final price:</string>
    <string name="payment">Payment</string>
    <string name="package_place_image">Package place image</string>
    <string name="payment_information">Please, input the credit card information for the payment</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="month_hint">MM</string>
    <string name="year_hint">AA</string>
    <string name="cvc_hint">CVC</string>
    <string name="credit_card_name_hint">Credit card name</string>
    <string name="finish_payment">Finish payment</string>
    <string name="mask_credit_card_name">adbcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZCç\u0020</string>
    <string name="congratulations">Congrats!</string>
    <string name="order_placed_with_success">Order placed with success :)</string>
    <string name="check_the_order_summary">Check the order summary:</string>
    <string name="order_summary_banner">Order summary banner</string>
</resources>