<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/payment_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/payment_information"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/payment_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/final_price"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_information" />

    <TextView
        android:id="@+id/payment_package_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/payment_final_price"
        app:layout_constraintTop_toBottomOf="@+id/payment_final_price"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/payment_credit_card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/credit_card_number"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_package_final_price" />

    <EditText
        android:id="@+id/payment_credit_card_month"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/month_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@+id/payment_credit_card_number" />

    <EditText
        android:id="@+id/payment_credit_card_year"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/year_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/payment_credit_card_cvc"
        app:layout_constraintStart_toEndOf="@+id/payment_credit_card_month" />

    <EditText
        android:id="@+id/payment_credit_card_cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_credit_card"
        android:drawableLeft="@drawable/ic_cvc_credit_card"
        android:hint="@string/cvc_hint"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/payment_credit_card_number"
        app:layout_constraintTop_toBottomOf="@+id/payment_credit_card_number" />

    <EditText
        android:id="@+id/payment_credit_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mask_credit_card_name"
        android:hint="@string/credit_card_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/payment_credit_card_cvc"
        app:layout_constraintStart_toStartOf="@id/payment_credit_card_month"
        app:layout_constraintTop_toBottomOf="@+id/payment_credit_card_cvc" />

    <Button
        android:id="@+id/payment_button_finish_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_orange"
        android:text="@string/finish_payment"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/payment_credit_card_name"
        app:layout_constraintStart_toStartOf="@+id/payment_credit_card_name"
        app:layout_constraintTop_toBottomOf="@+id/payment_credit_card_name" />
</androidx.constraintlayout.widget.ConstraintLayout>