<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/order_summary_banner"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/order_summary_banner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/order_summary_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/order_summary_banner"
        app:layout_constraintEnd_toEndOf="@+id/order_summary_banner"
        app:layout_constraintStart_toStartOf="@+id/order_summary_banner"
        app:layout_constraintTop_toTopOf="@+id/order_summary_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/order_summary_order_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/order_placed_with_success"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/order_summary_congratulations"
        app:layout_constraintStart_toStartOf="@+id/order_summary_congratulations"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_congratulations" />

    <TextView
        android:id="@+id/order_summary_check_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/check_the_order_summary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_banner" />

    <ImageView
        android:id="@+id/order_summary_package_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_check_summary"
        tools:srcCompat="@drawable/sao_paulo_sp"
        android:contentDescription="@string/package_place_image" />

    <TextView
        android:id="@+id/order_summary_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_package_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/order_summary_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/order_summary_place"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_place"
        tools:text="08/12 - 10/12 from 2017" />

    <TextView
        android:id="@+id/order_summary_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/order_summary_date"
        app:layout_constraintTop_toBottomOf="@+id/order_summary_date"
        tools:text="R$ 243,99" />
</androidx.constraintlayout.widget.ConstraintLayout>