<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/list_travel_packages_initial_banner"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:contentDescription="@string/initial_package_banner"
        android:src="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/list_travel_packages_specials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/specials"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/list_travel_packages_initial_banner"
        app:layout_constraintEnd_toEndOf="@id/list_travel_packages_initial_banner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/list_travel_packages_initial_banner"
        app:layout_constraintTop_toTopOf="@id/list_travel_packages_initial_banner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/list_travel_packages_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/brazil"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/list_travel_packages_specials"
        app:layout_constraintTop_toBottomOf="@+id/list_travel_packages_specials" />

    <ListView
        android:id="@+id/list_travel_packages_listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_travel_packages_initial_banner"
        tools:listitem="@layout/item_package" />

</androidx.constraintlayout.widget.ConstraintLayout>