<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/package_summary_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@drawable/sao_paulo_sp"
        android:contentDescription="@string/package_place_image" />

    <TextView
        android:id="@+id/package_summary_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_image"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/package_summary_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/package_summary_place"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_place"
        tools:text="2 days" />

    <TextView
        android:id="@+id/package_summary_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/package_summary_price"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/package_summary_days"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_days"
        tools:text="08/12 - 10/12 de 2017 " />

    <TextView
        android:id="@+id/package_summary_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/package_summary_date"
        app:layout_constraintEnd_toEndOf="@+id/package_summary_final_price"
        app:layout_constraintStart_toEndOf="@id/package_summary_date"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/package_summary_final_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/final_price"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/package_summary_price"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/package_summary_button_payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/round_button_orange"
        android:text="@string/payment"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>